- Bugzilla Bug (s) Resolved: 255309 - Description: 1. added check for read-only attribute when saving the report. 2. refined some code comments